--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>My H1 Header</h1>
-    <p>
+    <h1 id="myHeader"> My H1 Header</h1>
+    <p id="myParagraph">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita sed
       voluptates assumenda, aspernatur alias eos quidem in a, nam aperiam omnis
       quas rem officia sint optio nobis totam amet voluptas.
     </p>
+    <button id="myButton">Click Me</button>
     <script src="index.js"></script>
   </body>
 </html>
